<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <POU Name="RTC" Id="{50512f07-723a-0493-25f6-641df9e0db66}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM RTC 
VAR
	FB_LocalSystemTime_0	: FB_LocalSystemTime;
	TimeStamp		: TIMESTRUCT;
		
	TimeStamp_GMT		: TIMESTRUCT;
	
	FB_GetTimeZoneInformation_0 :FB_GetTimeZoneInformation;
	FB_SetTimeZoneInformation_0	:FB_SetTimeZoneInformation;
	ST_TimeZoneInformation:ST_TimeZoneInformation;

	
	Timer :ton;
	FlagGetTimeZone:BOOL;// :=TRUE;
	FlagSetTimeZone:BOOL;// :=TRUE;
	FlagInit	   :BOOL :=TRUE;	
	
	ErrorIDGetTimeZone:UDINT;
	ErrorIDSetTimeZone:UDINT;
	
	FB_TzSpecificLocalTimeToSystemTime:FB_TzSpecificLocalTimeToSystemTime;
//	amsid:T_AmsNetID :='192.168.101.2.1.1' ;
	amsid:T_AmsNetID ;
	
	//IISreset
	NT_StartProcess:NT_StartProcess;
	Flagiisreset:BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Timer(IN:=FlagInit,PT:=T#5S,Q=>FlagGetTimeZone);

FB_LocalSystemTime_0(
	sNetID:= '' , 
	bEnable:= TRUE, 
	dwCycle:= , 
	dwOpt:= , 
	tTimeout:= , 
	bValid=> , 
	systemTime=> TimeStamp, 
	tzID=> );

IF FlagInit THEN
	FlagGetTimeZone:=TRUE;
	Flagiisreset:=TRUE;
	FlagInit:=FALSE;
	
END_IF	

	FB_GetTimeZoneInformation_0(bExecute := FlagGetTimeZone,sNetID:=PcTransmit.fbPcTransmit_0.RTC_amsid);
	IF FB_GetTimeZoneInformation_0.bError THEN
		FlagGetTimeZone:=FALSE;
		ErrorIDGetTimeZone:=FB_GetTimeZoneInformation_0.nErrID;
		FB_GetTimeZoneInformation_0(bExecute := FlagGetTimeZone);   		
	ELSIF FB_GetTimeZoneInformation_0.bBusy=FALSE AND FlagGetTimeZone THEN
		ST_TimeZoneInformation:=FB_GetTimeZoneInformation_0.tzInfo;	
		FlagGetTimeZone:=FALSE;
		FlagSetTimeZone:=TRUE;
		FB_GetTimeZoneInformation_0(bExecute := FlagGetTimeZone);	
	END_IF


	FB_SetTimeZoneInformation_0(bExecute:=FlagSetTimeZone, tzInfo:=ST_TimeZoneInformation);
	IF FB_SetTimeZoneInformation_0.bError THEN
		FlagSetTimeZone:=FALSE;
		ErrorIDSetTimeZone:=FB_SetTimeZoneInformation_0.nErrID;
		FB_SetTimeZoneInformation_0(bExecute := FlagSetTimeZone);   		
	ELSIF FB_SetTimeZoneInformation_0.bBusy=FALSE AND FlagSetTimeZone THEN
		FlagSetTimeZone:=FALSE;
		FB_SetTimeZoneInformation_0(bExecute := FlagGetTimeZone);	
	END_IF
	

FB_TzSpecificLocalTimeToSystemTime(in:=TimeStamp,tzInfo:=ST_TimeZoneInformation, out=>TimeStamp_GMT);

(*TEMPH:= DINT_TO_INT(ST_TimeZoneInformation.bias+ST_TimeZoneInformation.daylightBias)/60;

Temp_H:=(WORD_TO_INT(TimeStamp.wHour) +TEMPH)MOD(24) ;
IF Temp_H<0 THEN
	Temp_H:=Temp_H+24;
END_IF

TimeStamp_GMT :=TimeStamp;
TimeStamp_GMT.wHour:= INT_TO_WORD(Temp_H);*)

//IISRESET
IF Flagiisreset THEN
	NT_StartProcess.PATHSTR := 'C:\hp\iisreset.bat';
	NT_StartProcess.DIRNAME := 'C:\hp';
	NT_StartProcess.START :=TRUE;
	NT_StartProcess();
	IF NT_StartProcess.BUSY = FALSE THEN
		Flagiisreset:=FALSE;
		NT_StartProcess.START :=FALSE;
		NT_StartProcess();
	END_IF
END_IF

]]></ST>
    </Implementation>
    <LineIds Name="RTC">
      <LineId Id="61" Count="1" />
      <LineId Id="7" Count="7" />
      <LineId Id="5" Count="0" />
      <LineId Id="56" Count="1" />
      <LineId Id="116" Count="0" />
      <LineId Id="165" Count="0" />
      <LineId Id="132" Count="0" />
      <LineId Id="164" Count="0" />
      <LineId Id="117" Count="1" />
      <LineId Id="58" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="69" Count="0" />
      <LineId Id="135" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="68" Count="0" />
      <LineId Id="121" Count="0" />
      <LineId Id="72" Count="0" />
      <LineId Id="119" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="67" Count="0" />
      <LineId Id="94" Count="0" />
      <LineId Id="113" Count="0" />
      <LineId Id="112" Count="0" />
      <LineId Id="123" Count="1" />
      <LineId Id="136" Count="0" />
      <LineId Id="125" Count="1" />
      <LineId Id="129" Count="2" />
      <LineId Id="122" Count="0" />
      <LineId Id="109" Count="1" />
      <LineId Id="74" Count="1" />
      <LineId Id="31" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="53" Count="2" />
      <LineId Id="41" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="106" Count="0" />
      <LineId Id="47" Count="0" />
      <LineId Id="168" Count="3" />
      <LineId Id="176" Count="0" />
      <LineId Id="174" Count="0" />
      <LineId Id="172" Count="0" />
      <LineId Id="177" Count="0" />
      <LineId Id="205" Count="0" />
      <LineId Id="175" Count="0" />
      <LineId Id="173" Count="0" />
      <LineId Id="167" Count="0" />
      <LineId Id="166" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>